Integrate unified P1-P5 scientific fronts